--- a/views/index.html
+++ b/views/index.html
@@ -1,92 +1,29 @@
-{% extends 'layout.html' %}
+<!doctype html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<title>Voyage Actually</title>
 
-{% block title %}Your Trip{% endblock %}
-
-{% block content %}
-<div id="app" class="clearfix">
-  <div class="map-container col-sm-8 col-lg-9">
-    <div>
-      <div id="map-canvas"></div>
-    </div>
-  </div>
-  <div id="control-panel" class="col-sm-4 col-lg-3 clearfix">
-    <div class="col-xs-6 col-sm-12">
-      <div class="panel panel-default">
-        <div class="panel-body" id="options-panel">
-          <div>
-            <h4>Hotels</h4>
-            <select data-type="hotel" id="hotel-choices">
-              <option>Andaz Wall Street</option>
-              <option>...</option>
-            </select>
-            <button data-action="add" class="btn btn-primary btn-circle pull-right">+</button>
-          </div>
-          <div>
-            <h4>Restaurants</h4>
-            <select data-type="restaurant" id="restaurant-choices">
-              <option>Bouley</option>
-              <option>...</option>
-            </select>
-            <button data-action="add" class="btn btn-primary btn-circle pull-right">+</button>
-          </div>
-          <div>
-            <h4>Activities</h4>
-            <select data-type="activity" id="activity-choices">
-              <option>Mahayana Buddhist Temple Association</option>
-              <option>...</option>
-            </select>
-            <button data-action="add" class="btn btn-primary btn-circle pull-right">+</button>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="col-xs-6 col-sm-12">
-      <h3>
-        <span id="day-title">
-          <span>Day 2</span>
-          <button class="btn btn-xs btn-danger remove btn-circle">x</button>
-        </span>
-      </h3>
-      <div class="panel panel-default">
-        <div class="panel-heading">
-          <div class="day-buttons">
-            <button class="btn btn-circle day-btn">1</button>
-            <button class="btn btn-circle day-btn current-day">2</button>
-            <button class="btn btn-circle day-btn">3</button>
-            <button class="btn btn-circle day-btn" id="day-add">+</button>
-          </div>
-        </div>
-        <div class="panel-body" id="itinerary">
-          <div>
-            <h4>My Hotel</h4>
-            <ul class="list-group">
-              <div class="itinerary-item">
-                <span class="title">Andaz Wall Street</span>
-                <button class="btn btn-xs btn-danger remove btn-circle">x</button>
-              </div>
-            </ul>
-          </div>
-          <div>
-            <h4>My Restaurants</h4>
-            <ul class="list-group">
-              <div class="itinerary-item">
-                <span class="title">Bouley</span>
-                <button class="btn btn-xs btn-danger remove btn-circle">x</button>
-              </div>
-            </ul>
-          </div>
-          <div>
-            <h4>My Activities</h4>
-            <ul class="list-group">
-              <div class="itinerary-item">
-                <span class="title">Mahayana Buddhist Temple Association</span>
-                <button class="btn btn-xs btn-danger remove btn-circle">x</button>
-              </div>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+<script src="script.js"></script>
+</head>
+<body>
+<div>
+<div>
+<nav class="navbar navbar-inverse" role="navigation">
+       <ul class="nav navbar-nav">
+      <li class="active"><a href="/">Home<span class="sr-only">(current)</span></a></li>
+      <li><a href="/about">About us</a></li>
+      <li><a href="/contact">Contact us</a></li>
+    </ul>
+</nav>
 </div>
-{% endblock %}
+<br/>
+<div class="jumbotron"> <p>
+This is place to put content. You can put slider, short description about your website and place some links for navigation.
+</p></div>
+</div>
+</body>
+</html>
