--- a/views/about.html
+++ b/views/about.html
@@ -10,16 +10,37 @@
          <ul class="nav navbar-nav">
         <li><a href="/">Home</a></li>
         <li class="active"><a href="/about">About us<span class="sr-only">(current)</span></a></li>
+        <li><a href="/services">Services</a></li>
         <li><a href="/contact">Contact us</a></li>
       </ul>
 </nav>
 </div>
   <br/>
-  <div class="jumbotron">
+ 
+<h1>Our Mission</h1>
   <p>
-    Put detail description about you and your company.
+  Inspire, motivate and encourage all the human families of the Planet Earth through proper diet and exercise. 
   </p>
+
+<h1>Our Goal</h1>
+  <p>
+  To help people like you take control of your own health. Through our high level mobile application we provide online fitness and individualized nutritional programs, you will have the ability to plan your workouts and meal plans around your hectic schedule. If you're ready to get started, [add link here] sign up for our free trial today.
+  </p>
+
+<h2>Here's what you can expect to receive:</h2>
+  <ul>
+    <li>A one month free trial.</li>
+    <li>Customized workout plans designed specifically for your needs, goals, and schedule.</li>
+    <li>The option of having nutritional guidance, including meal plans.</li>
+    <li>Regular emails with helpful information and tips.</li>
+    <li>Ongoing support, encouragement and accountability from our team.</li>
+    <li>Instructional videos and written instructions for all exercises.</li>
+    <li>Access to our mobile app and website so you can train anywhere.</li>
+    <li>Regular check-ins and feedback. </li>
+    <li>Convenient and affordable payment options.</li>
+    <li>24 hour online support.</li>
+    <li>Access to thousands of video content.</li>
+  </ul>
 </div>
-  </div>
 </body>
 </html>
