--- a/views/index.html
+++ b/views/index.html
@@ -1,29 +1,176 @@
-<!doctype html>
+ <!doctype html>
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Voyage Actually</title>
+<title>Supreme Training</title>
 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+<link href="/stylesheets/carousel.css" rel="stylesheet">
+<link href="/stylesheets/style.css" rel="stylesheet">
 <script src="script.js"></script>
+<link href="https://fonts.googleapis.com/css?family=Oswald:400,600" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
 </head>
+
 <body>
 <div>
-<div>
-<nav class="navbar navbar-inverse" role="navigation">
-       <ul class="nav navbar-nav">
-      <li class="active"><a href="/">Home<span class="sr-only">(current)</span></a></li>
-      <li><a href="/about">About us</a></li>
-      <li><a href="/contact">Contact us</a></li>
-    </ul>
-</nav>
+
+
+
+
+  <div>
+    <div id="main-header">
+    <nav class="navbar navbar-inverse" role="navigation">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+      </div>
+        <ul class="nav navbar-nav">
+          <li class="active"><a href="/">Home<span class="sr-only">(current)</span></a></li>
+          <li><a href="#services">Services</a></li>
+          <li><a href="#testimonials">Testimonials</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+    </nav>
+
+      <h1>Personal training is not a luxury...<br>it's a lifestyle</h1>
+      <img src="/images/supreme-gradient-oneline.png">
+      <button class="main-button">Start your 30-day free trial today!</button>
+    </div>
+  </div>
+
+<div class="container marketing">
+  <div id="short-about">
+      <br><br>
+      <h2 class="featurette-heading">OUR MISSION</h2><br>
+      <p class="featured-p">Inspire, motivate and encourage all humans of Planet Earth through proper diet and exercise.</p><br><br>
+      <p class="featured-p">Our goal is to help people like you take control of your own health. Through our high level mobile application we provide online fitness and individualized nutritional programs.</p><br><br>
+      <p class="featured-p">You will have the ability to plan your workouts and meal plans around your hectic schedule. If you're ready to get started sign up for our free trial today.</p>
+      <button class="text-center">Learn More</button><br><br>
+  </div>   
 </div>
-<br/>
-<div class="jumbotron"> <p>
-This is place to put content. You can put slider, short description about your website and place some links for navigation.
-</p></div>
+
+<h2 class="featurette-heading">OUR SERVICES</h2><br><br>
+<div class="container-fluid" id="services">
+  <div id="workout">
+      <br><br>
+      <h2 class="featurette-heading service-heading">IN-PERSON<br>TRAINING</h2><br>
+      <p class="featured-p service-p">Our customized training plans are tailored to meet your specific goals, while maximizing results and minimizing injuries. 
+      <br><br>Each session is planned by our trainers in advance so that you can maximize your time and investment. What's best--you'll leave every session feeling great knowing you're closer to achieving your goals.<br><br>
+      <button style="text-align: center">Book an Appointment</button>
+      </p>
+
+  </div>   
+
+  <div id="workout">
+      <br><br>
+      <h2 class="featurette-heading service-heading">ONLINE PERSONALIZED<br>TRAINING</h2><br>
+      <p class="featured-p service-p">Supreme Training  provides you with all the benefits of personal training from the convenience of your computer or mobile device. Our high level software allows us to customize workouts to your needs and goals. Train at the gym, at home, on the road, or at the office!<br>
+      <button style="text-align: center">Download the App</button></p>
+  </div>   
+
+  <div id="nutrition">
+      <br><br>
+      <h2 class="featurette-heading service-heading">NUTRITIONAL<br>PROGRAMMING</h2><br>
+      <p class="featured-p service-p">Eating healthy and portion control can be a struggle for anyone trying to balance work, family, and travel. We provide clients with individualized nutritional programs to make sure that you're on the right path. <br><br>Calorie recommendations, grocery lists, meal plans and educational tips are provided through our high level proprietary software.<br>
+      <button style="text-align: center">Start Eating Right</button></p>
+  </div>   
+
+  <div id="nutrition">
+      <br><br>
+      <h2 class="featurette-heading service-heading">CORPORATE<br>WELLNESS</h2><br>
+      <p class="featured-p service-p">When your employees are healthy and happy, everyone wins. Our wellness division will work with your human resources department to provide a customized fitness program designed for your team to increase accountability and motivate your employees. <br><br>Our wellness program will enhance the quality of life for your employee staff.
+      <br><button style="text-align: center">Bring the Workout to Work</button></p>
+  </div>   
+
 </div>
-</body>
+
+
+
+<br><br>
+ <div class="container marketing" id="testimonials">
+  <div id="short-about">
+      <br><br>
+      <h2 class="featurette-heading">PEOPLE LOVE US</h2><br>
+      <p class="featured-p">Testimonial carousel goes here.</p><br><br>
+      <p class="featured-p">Our goal is to help people like you take control of your own health. Through our high level mobile application we provide online fitness and individualized nutritional programs.</p><br><br>
+      <div id="myCarousel" class="carousel slide" data-ride="carousel">
+  <!-- Indicators -->
+  <ol class="carousel-indicators">
+    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+    <li data-target="#myCarousel" data-slide-to="1"></li>
+    <li data-target="#myCarousel" data-slide-to="2"></li>
+  </ol>
+
+  <!-- Wrapper for slides -->
+  <div class="carousel-inner">
+    <div class="item active">
+      <img src="/images/one-hand.jpg" alt="Chania">
+      <div class="carousel-caption">
+        <h3>Karen C., 36</h3>
+        <p>I’ve never had the same two workout sessions – there’s always a lot of variety to keep me motivated and progress. I’m about to tackle a 10k in a couple of weeks, which I wouldn’t be doing without the help of Supreme Training.</p>
+      </div>
+    </div>
+
+    <div class="item">
+      <img src="/images/one-hand.jpg" alt="Chania">
+      <div class="carousel-caption">
+        <h3>Molly N., 29</h3>
+        <p>It's the perfect mix of fitness, motion and anatomy knowledge, along with firmness and encouragement.</p>
+      </div>
+    </div>
+
+    <div class="item">
+      <img src="/images/one-hand.jpg" alt="Chania">
+      <div class="carousel-caption">
+        <h3>Sam K., 46</h3>
+        <p>Enter praise here</p>
+      </div>
+    </div>
+  </div>
+
+  <!-- Left and right controls -->
+  <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="right carousel-control" href="#myCarousel" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
+      <button class="text-center">Learn More</button><br><br>
+  </div>   
+</div>
+
+      <!-- /END THE FEATURETTES -->
+
+
+      <!-- FOOTER -->
+      <footer>
+        <p class="pull-right"><a href="#">Back to top</a></p>
+        <p>&copy; 2017 Supremetraining, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
+      </footer>
+  </div><!-- /.container -->
+
+
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
+    <script src="../../dist/js/bootstrap.min.js"></script>
+    <!-- Just to make our placeholder images work. Don't actually copy the next line! -->
+    <script src="../../assets/js/vendor/holder.min.js"></script>
+    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+    <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
+  </body>
+
 </html>
