--- a/views/contact.html
+++ b/views/contact.html
@@ -10,6 +10,7 @@
          <ul class="nav navbar-nav">
         <li><a href="/">Home</a></li>
         <li><a href="/about">About us</a></li>
+        <li><a href="/services">Services</a></li>
         <li class="active"><a href="/contact">Contact us<span class="sr-only">(current)</span></a></li>
       </ul>
 </nav>
